--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,14 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Vercel
 .vercel
-.env*.local
+
+# Environment variables
+.env
+
+# Sensitive files
+*.pem
+*.key
+.env.backup
